# niche-notifier

./: .env.example  .gitignore  HOW_TO_USE_LOCAL_AI_MODEL.md  PROCESS.md  README.md  feeds.yaml  pyproject.toml  requirements.txt
.agent/rules/: language.md  overview.md  test.md
.github/workflows/: main.yml
api/: main.py  schemas.py
api/routers/: articles.py  categories.py  feeds.py
apps/api/: main.py  schemas.py
apps/api/routers/: articles.py  categories.py  feeds.py
apps/web/: package-lock.json  tailwind.config.js
apps/web/src/components/: FeedForm.jsx  FeedList.jsx
config/: feeds.yaml
docker/: docker-compose.ollama.yml
docs/: HOW_TO_USE_LOCAL_AI_MODEL.md  MIGRATION_GUIDE.md
migrations/: 000_initial_schema.sql  001_add_category_priority.sql  002_add_feeds_table.sql  003_add_subcategory_summary_fields.sql  003_add_summary_column.sql
plans/: discord-limit-validation.plan.md  embed-content-improvement.md  feature-expansion-proposals.md  local-test.plan.md  project-init.plan.md  summary-function.plan.md  update-directory-architecture.plan.md  web-client.plan.md
scripts/: run_migration.py
src/: __init__.py  config.py  db.py  main.py  notifier.py  parser.py  summarizer.py
tests/: __init__.py  test_api.py  test_config.py  test_db.py  test_keyword_filter.py  test_notifier.py  test_parser.py  test_summarizer.py  test_webhook.py
web/src/: App.jsx  index.css
web/src/api/: client.js
web/src/components/: ArticleList.jsx  DiscordPreview.jsx
