[tool.poetry]
name = "notify-niche"
version = "0.1.0"
description = "RSS Collector and Niche Information Notification System"
readme = "README.md"
authors = ["Your Name <you@example.com>"]
packages = [
    { include = "src" }
]

[tool.poetry.dependencies]
python = "^3.9"
feedparser = "^6.0.0"
requests = "^2.28.0"
supabase = "^2.0.0"
python-dotenv = "^1.0.0"
pyyaml = "^6.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0.0"
pytest-cov = "^4.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
